Fixed spacing a little

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -3,18 +3,19 @@
  * Copyright 2013-2019 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
-header {
+/* header {
   padding: 156px 0 100px;
   min-height: 100%;
-}
+} */
 
-section {
-  padding: 150px 0;
-}
 
 header.masthead {
   padding-top: calc(6rem + 72px);
-  padding-bottom: 6rem;
+  padding-bottom: 8rem;
   background-image:url('https://i.imgur.com/cgmfFEg.jpg');
+}
+
+section {
+  padding: 100px 0;
 }
 
